# Automodel

./: .cursorrules  .gitignore  .gitlab-ci.yml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  build_log.txt  codecov.yml  pyproject.toml  recipes  setup.py
.cursor/rules/: code-no-comments-py.mdc  docs-audit.mdc  docs-bump-version.mdc  docs-check-source.mdc  docs-frontmatter.mdc  docs-modularize-content.mdc  docs-os.mdc  docs-personas.mdc  docs-style-guide.mdc  docs-task-management.mdc  docs-tooling.mdc  docs-writing-workflow.mdc
.github/: CODEOWNERS  copy-pr-bot.yaml
.github/workflows/: _build_container.yml  _update_dependencies.yml  build-docs.yml  build-test-publish-wheel.yml  cicd-approve-test-queue.yml  cicd-main.yml  cicd-test.yml  code-formatting.yml  code-linting.yml  community-bot.yml  copyright-check.yml  dependabot.yml  downstream-cicd-test.yml  install-test.yml  release.yml  secrets-detector.yml
Tutorials/Finetune/: basic_lora.yaml  config.py  data_modules.py  demo.ipynb  executors.py  recipe_factory.py  train.py
automodel/: package_info.py
automodel/config/: loader.py
automodel/datasets/: hellaswag.py  hf_dataset.py  utils.py
automodel/distributed/: ddp.py  fsdp2.py  parallelizer.py
automodel/loggers/: _wandb.py
automodel/optim/: scheduler.py
automodel/peft/: lora.py  lora_kernel.py
automodel/training/: base_recipe.py  checkpoint.py  checkpoint_utils.py  config.py  finetune.py  init_utils.py  model_utils.py  rng.py  state.py  step_scheduler.py  train_utils.py
automodel/utils/: config_utils.py  dist_utils.py  import_utils.py  sig_utils.py
docker/: Dockerfile.ci  Dockerfile.debug
docker/common/: install.sh  install_conflicting_deps.sh
docs/: README.md  api-autodoc-setup-guide.md  autodoc2_docstrings_parser.py  conf.py  documentation.md  gen_docs.sh  index.md  parallelisms.md  project.json  repository-structure.md  repository_structure.md  versions1.json
docs/_extensions/: modal_diagrams_README.md
docs/_templates/: autodoc2_index.rst
docs/about/: ai-agent-lifecycle.md  architecture-overview.md  index.md  key-features.md  repository-and-package-guide.md  repository-structure.md
docs/api-docs/: index.md  index.rst
docs/blogs/: gemma3n-blog.md  index.md
docs/environment/: local-workstation.md
docs/get-started/: index.md  installation.md  local-workstation.md  model-selection.md  quick-start.md
docs/guides/: autopipeline.md  checkpointing.md  dataset.md  fp8_training.md  gemma3-3n.md  gemma3n_blog.md  gradient_checkpointing.md  index.md  installation.md  pipelining.md  sft.md
docs/learning-resources/: index.md  recipes.md
docs/model-coverage/: index.md  llm.md  vlm.md
docs/model_coverage/: llm.md  vlm.md
docs/references/: api-interfaces-reference.md  cli-command-reference.md  index.md  python-api-reference.md  troubleshooting-reference.md  yaml-configuration-reference.md
examples/: automodel_finetune_llama_3_2_1b_hellaswag.py
examples/llm/: cohere_command_r_7b_squad.yaml  deepseek_v3_next_token_prediction.py  finetune.py  gemma_2_9b_it_squad.yaml  glm_4_9b_chat_hf_squad.yaml  granite_3_3_2b_instruct_squad.yaml  knowledge_distillation.py  llama_3_1_70b_hellaswag.yaml  llama_3_1_70b_hellaswag_nvfsdp.yaml  llama_3_1_8b_hellaswag.yaml  llama_3_1_8b_hellaswag_fp8.yaml  llama_3_1_8b_hellaswag_nvfsdp.yaml  llama_3_1_8b_squad.yaml  llama_3_1_8b_squad_nvfsdp.yaml  llama_3_2_1b_fineweb_edu.yaml  llama_3_2_1b_hellaswag.yaml  llama_3_2_1b_hellaswag_fp8.yaml  llama_3_2_1b_hellaswag_nvfsdp.yaml  llama_3_2_1b_hellaswag_peft.yaml  llama_3_2_1b_kd.yaml  llama_3_2_1b_mock_fp8_8192.yaml  llama_3_2_1b_squad.yaml  llama_3_2_1b_squad_nvfsdp.yaml  llama_3_2_3b-1b_kd.yaml  llama_3_70b_hellaswag.yaml  llama_3_70b_hellaswag_nvfsdp.yaml  mistral_7b_squad.yaml  mistral_nemo_2407_squad.yaml  moonlight_16b.yaml  phi_3_mini_it_squad.yaml  phi_4_squad.yaml  qwen2_5_7b_squad.yaml  qwen_3_0p6b_hellaswag.yaml  qwen_3_8b_hellaswag.yaml  seed_oss_36B_hellaswag_peft.yaml  starcoder_2_7b_squad.yaml
examples/llm_finetune/: finetune.py
examples/llm_pretrain/: nanogpt_pretrain.yaml  pretrain.py
examples/vlm/: finetune.py  gemma_3_vl_4b_cord_v2.yaml  gemma_3_vl_4b_cord_v2_nvfsdp.yaml  gemma_3_vl_4b_cord_v2_peft.yaml  gemma_3_vl_4b_medpix.yaml  gemma_3_vl_4b_medpix_peft.yaml  gemma_3n_vl_4b_medpix.yaml  gemma_3n_vl_4b_medpix_peft.yaml  generate.py  phi_4_mm_cv17.yaml  qwen2_5_vl_3b_rdr.yaml
nemo/automodel/: __init__.py
nemo_automodel/: __init__.py  __version__.py  base_recipe.py  package_info.py  torch_backports.py
nemo_automodel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nemo_automodel/_cli/: __init__.py  app.py  cli.py
nemo_automodel/_peft/: lora.py  lora_kernel.py  module_matcher.py
nemo_automodel/_transformers/: __init__.py  auto_model.py
nemo_automodel/checkpoint/: _torch_backports.py  checkpointing.py  hf_planner.py  hf_storage.py  stateful_wrappers.py
nemo_automodel/config/: cli.py  loader.py
nemo_automodel/datasets/: hellaswag.py  hf_dataset.py  indexed_dataset.py  utils.py
nemo_automodel/distributed/: cp_utils.py  ddp.py  distributed_interface.py  fsdp2.py  init_utils.py  nvfsdp.py  parallelizer.py
nemo_automodel/float8/: config.py  float8_linear.py  float8_scaling_utils.py  float8_tensor.py  float8_utils.py
nemo_automodel/loggers/: _wandb.py  log_utils.py  wandb_utils.py
nemo_automodel/loss/: chunked_ce.py  linear_ce.py  masked_ce.py
nemo_automodel/models/: auto_model_for_causal_lm.py
nemo_automodel/optim/: scheduler.py
nemo_automodel/recipes/: __init__.py  base_recipe.py
nemo_automodel/shared/: import_utils.py  parallel_dims.py  utils.py
nemo_automodel/training/: __init__.py  base_recipe.py  checkpoint.py  checkpoint_utils.py  compile.py  config.py  finetune.py  init_utils.py  model_utils.py  rng.py  (+4 more)
recipes/: automodel_finetune.py  finetune.py  llama_3_2_1b_hellaswag.yaml
requirements/: docs.txt  requirements.txt
scripts/: __init__.py  preview-index-template.html
tests/: run_test.sh
tools/: autoformat.sh  evaluate_squad.py  nanogpt_data_processor.py
(+707 files in other folders)
